# mkdocs-fun-plugin

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: docs.md  fun.py
src/mkdocs_fun_plugin/: __main__.py  plugin.py
tests/: test_executor.py
