[project]
name = "mkdocs-fun-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Guðmundur Björn Birkisson", email = "gbb@gbb.is" },
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mkdocs==1.6.1",
  "pyright==1.1.399",
  "pytest-cov==6.1.1",
  "ruff==0.11.6",
]

[project.entry-points."mkdocs.plugins"]
fun = "mkdocs_fun_plugin.plugin:FunPlugin"

[tool.ruff]
line-length = 96

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "C901",
  "D",
  "PLR0912",
  "PT009",
  "PT027",
  "S101",
  "SLF001",
]

[tool.pytest.ini_options]
addopts = "--cov=mkdocs_fun_plugin --cov-report xml"
